mod: AbilityMaster SizeMasterControll

--- a/web/monsterMaster/Edit_template.xhtml
+++ b/web/monsterMaster/Edit_template.xhtml
@@ -20,8 +20,9 @@
 
         <h:panelGrid columns="6">                    
           <h:outputLabel value="サイズ" for="sizeId" />
-          <h:selectOneMenu id="sizeId" value="#{monsterMasterController.selected.sizeId}">                        
-            <f:selectItems value="#{sizeMasterController.itemsAvailableSelectOne}"/>
+          <h:selectOneMenu id="sizeId" value="#{monsterMasterController.selected.sizeId}">   
+            <f:selectItem itemValue="" itemLabel="未選択"/>
+            <f:selectItems value="#{applicationController.sizeList}"/>
           </h:selectOneMenu> 
           <h:outputLabel value="種別" for="type" />                    
           <h:selectOneMenu id="type" value="#{monsterMasterController.selected.type}">
@@ -34,7 +35,7 @@
           <h:inputText id="hitDiceNum" styleClass="smallTextField" 
                        value="#{monsterMasterController.selected.hitDiceNum}"  />
           <h:outputLabel value="ヒットダイス種" for="hitDiceType" />
-          <h:selectOneMenu id="hitDiceType" value="#{monsterMasterController.selected.hitDiceType}">                                       
+          <h:selectOneMenu id="hitDiceType" value="#{monsterMasterController.selected.hitDiceType}">                                  <f:selectItem itemValue="" itemLabel="未選択"/>
             <f:selectItems value="#{applicationController.diceList}"/>
           </h:selectOneMenu> 
         </h:panelGrid>
@@ -139,7 +140,8 @@
           <h:inputText id="advancement" value="#{monsterMasterController.selected.advancement}"/>
           <h:outputLabel value="属性" for="alignment" />
           <h:selectOneMenu id="alignment" value="#{monsterMasterController.selected.alignment}" >
-            <f:selectItems value="#{alignmentMasterController.itemsAvailableSelectOne}"/>
+            <f:selectItem itemValue="" itemLabel="未選択"/>
+            <f:selectItems value="#{applicationController.alignmentList}"/>
           </h:selectOneMenu>  
           <h:outputLabel value="レベル調整値" for="alignment" />
           <h:inputText id="levelAdjustment" styleClass="smallTextField"  
