mod: made top page to Prime Face based page.

--- a/web/armMaster/Edit.xhtml
+++ b/web/armMaster/Edit.xhtml
@@ -145,7 +145,7 @@
           <h:commandButton action="#{armMasterController.destroy}"
                            disabled="#{armMasterController.deleteButtonDisabled}" 
                            id="deleteButton1" style="color: rgb(255, 51, 51)" 
-                           onclick="return confirm('削除しますか?')" value="武器の削除"/>
+                           onclick="return confirm('削除しますか?');" value="武器の削除"/>
         </h:panelGrid>
 
         <h:panelGrid columns="2" style="height: 100%; width: 100%">
