--- a/web/characterSheet/CharacterListPage.xhtml
+++ b/web/characterSheet/CharacterListPage.xhtml
@@ -3,108 +3,87 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
+
+  <ui:composition template="/template.xhtml">
+    <ui:define name="title">
+      <h:outputText value="キャラクター一覧"></h:outputText>
+    </ui:define>
+    <ui:define name="body">
+      <h:form> 
+        <h:panelGrid style="width: 100%" >         
+
+          <h:panelGrid columns="1" id="campFilterGridPanel" style="width: 100%; height: 100%;">                         
+            <h:panelGrid style="width: 100%; text-align: right">
+              <h:commandLink action="#{characterSheetController.newCharaButton_action}" id="newCharaButton" 
+                             style="font-size: 12px" value="新キャラクター作成"/>
+            </h:panelGrid>
+          </h:panelGrid>
+          <p:dataTable id="charaTable" 
+                       value="#{sessionController.characterDataList}" 
+                       var="chara" 
+                       widgetVar="charaTable" 
+                       sortBy="#{chara.lastChange}"
+                       resizableColumns="true"
+                       draggableColumns="true"
+                       emptyMessage="指定された条件に合うキャラクターは見つかりませんでした" 
+                       filteredValue="#{sessionController.filteredCharacterData}"
+                       >                       
+                       <!--                       
+                       rowKey="#{chara.id}"
+                       
+                       paginator="true" 
+                       rows="10">
+            selection="#{sessionController.checkedCharacterList}">                       
+            <p:column selectionMode="multiple" style="width:2%" />                         
+                       -->
 
 
-    <ui:composition template="/template.xhtml">
-        <ui:define name="title">
-            <h:outputText value="キャラクター一覧"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:form id="form1"> 
-                <h:panelGrid id="contentsGrid" style="width: 100%" >
-                    <h:panelGrid columns="2" id="campFilterGridPanel" style="width: 100%; height: 100%;">
-                        <h:panelGrid columns="2">
-                            <h:outputLabel value="キャンペーン"/>
-                            <h:selectOneMenu id="dropdown1" onchange="submit();" 
-                                             valueChangeListener="#{characterSheetController.campaign_processValueChange}" 
-                                             style="width: 240px" value="#{characterSheetController.selectedCampaign}" >
-                                <f:selectItems id="dropdown1SelectItems" value="#{campaignMasterController.itemsAvailableSelectOne}"/>
-                            </h:selectOneMenu>
-                        </h:panelGrid>                            
-                        <h:panelGrid style="width: 100%; text-align: right">
-                            <h:commandLink action="#{characterSheetController.newCharaButton_action}" id="newCharaButton" style="font-size: 12px" value="新キャラクター作成"/>
-                        </h:panelGrid>
-                    </h:panelGrid>
-                    <h:panelGroup rendered="#{scenarioCharacterRecordController.items.rowCount > 0}">
-                        <h:outputText value="#{characterSheetController.pagination.pageFirstItem + 1}..#{characterSheetController.pagination.pageLastItem + 1}/#{characterSheetController.pagination.itemsCount}"/>&nbsp;
-                        <h:commandLink action="#{characterSheetController.previous}" value="#{bundle.Previous} #{characterSheetController.pagination.pageSize}" rendered="#{characterSheetController.pagination.hasPreviousPage}"/>&nbsp;
-                        <h:commandLink action="#{characterSheetController.next}" value="#{bundle.Next} #{characterSheetController.pagination.pageSize}" rendered="#{characterSheetController.pagination.hasNextPage}"/>&nbsp;
-                        
-                    <h:panelGrid id="charaListGridPanel" style="width: 100%; height: 100%;" styleClass="tableGrid">
-                        <h:dataTable binding="#{characterSheetController.characterListDataTable}"
-                                     id="characterListDataTable" styleClass="w" 
-                                     value="#{characterSheetController.characterDataList}" 
-                                     var="currentRow">
-                            <h:column id="check">
-                                <h:selectBooleanCheckbox id="checkbox1" 
-                                                         value="#{characterSheetController.characterChecked}"/>
-                            </h:column>
-                            <h:column id="column1">
-                                <h:commandLink action="#{characterSheetController.charaEditLink_action}" id="charaEditLink"
-                                               style="font-size: 12px; font-weight: bold;" >
-                                    <h:outputText id="charaEditLinkText" value="#{currentRow.characterName}"/>
-                                </h:commandLink>
-                                <f:facet name="header">
-                                    <h:outputText id="outputText9" value="キャラクター名"/>
-                                </f:facet>
-                            </h:column>                            
-                            <h:column id="column3">
-                                <h:outputText id="outputText6" style="font-size: 14px; " value="#{currentRow.playerName}"/>
-                                <f:facet name="header">
-                                    <h:outputText id="outputText7" value="プレイヤー"/>
-                                </f:facet>
-                            </h:column>
-                            <h:column id="column4">
-                                <h:outputText id="outputText8" style="font-size: 14px" value="#{currentRow.level}"/>
-                                <f:facet name="header">
-                                    <h:outputText id="outputText10"  value="Lv"/>
-                                </f:facet>
-                            </h:column>
-                            <h:column id="column7">
-                                <h:panelGrid id="gridPanel2"  styleClass="qPrintClassList">
-                                    <h:outputText id="outputText13" value="#{currentRow.classList}"/>
-                                </h:panelGrid>
-                                <f:facet name="header">
-                                    <h:outputText id="outputText14" value="クラスリスト"/>
-                                </f:facet>
-                            </h:column>
-                            <h:column id="column2">
-                                <h:outputText id="outputText4" value="#{currentRow.campaignId.campaignName}"/>
-                                <f:facet name="header">
-                                    <h:outputText id="outputText5" value="キャンペーン"/>
-                                </f:facet>
-                            </h:column>
-                            <h:column id="column8">
-                                <h:outputText id="outputText15" value="#{currentRow.lastChange}"/>
-                                <f:facet name="header">
-                                    <h:outputText id="outputText16" value="更新日"/>
-                                </f:facet>
-                            </h:column>
-                            <h:column id="column6">
-                                <h:commandLink action="#{characterSheetController.charaViewButton_action}" id="linkAction1"
-                                               style="font-size: 12px;" target="_blank">
-                                    <h:outputText id="linkAction1Text" value="印刷用"/>
-                                </h:commandLink>
-                                <f:facet name="header">
-                                    <h:outputText id="outputText11" style="border: 1px solid #000000; "/>
-                                </f:facet>
-                            </h:column>
-                        </h:dataTable>
-                    </h:panelGrid>
-                    <h:panelGrid columns="4" id="gridPanel1" style="height: 100%; width: 100%">
-                        <h:commandLink action="#{characterSheetController.listSummaryButton_action}" target="blank">                        
-                            <h:outputText style="size: 10px" value="選択したキャラを一覧表示" />                                                            
-                        </h:commandLink> 
-                        <h:commandLink action="#{encounterToolController.listSummaryButton_action}" target="blank" >
-                            <h:outputText style="size: 10px" value="エンカウンター(未実装)" />                                                            
-                        </h:commandLink> 
-                        <h:commandButton action="#{characterSheetController.selectAllButton_action}" id="selectAllButton" value="全て選択"/>
-                        <h:commandButton action="#{characterSheetController.releaseAllButton_action}" id="releaseAllButton" value="全て解除"/>
-                    </h:panelGrid>                        
-                    </h:panelGroup>
-                </h:panelGrid>
-            </h:form>
-        </ui:define>            
-    </ui:composition>
+            <p:column filterBy="#{chara.characterName}" headerText="キャラクター名" 
+                      filterMatchMode="contains">
+              <h:commandLink action="#{characterSheetController.charaEditLink_action}"
+                             style="font-weight: bold;" >
+                <h:outputText value="#{chara.characterName}"/>
+                <f:setPropertyActionListener value="#{chara}" target="#{sessionController.characterData}"/>  
+              </h:commandLink>
+            </p:column> 
+            <p:column headerText="プレイヤー" filterBy="#{chara.playerName}"
+                      filterMatchMode="contains">
+              <h:outputText style="font-size: 14px; " value="#{chara.playerName}"/>
+            </p:column>
+            <p:column headerText="Lv">
+              <h:outputText style="font-size: 14px" value="#{chara.level}"/>
+            </p:column>
+            <p:column headerText="クラスリスト">
+              <h:outputText value="#{chara.classList}"/>
+            </p:column>
+            <p:column headerText="キャンペーン" filterBy="#{chara.campaignId}" sortBy="#{chara.campaignId}"
+                      filterOptions="#{applicationController.campaignMasterOptions}"
+                      filterMatchMode="exact">
+              <h:outputText value="#{chara.campaignId.campaignName}"/>
+            </p:column>
+            <p:column headerText="更新日" sortBy="#{chara.lastChange}" >
+              <h:outputText value="#{chara.lastChange}"/>
+            </p:column>
+            <p:column>
+              <h:commandLink action="#{characterSheetController.charaViewButton_action}" 
+                             style="font-size: 12px;" target="_blank">
+                <h:outputText  value="印刷用"/>
+              </h:commandLink>
+            </p:column>        
+          </p:dataTable>
+
+          <h:panelGrid columns="4" id="gridPanel1" style="height: 100%; width: 100%">
+            <h:commandLink action="#{characterSheetController.listSummaryButton_action}" target="blank">                        
+              <h:outputText style="size: 10px" value="選択したキャラを一覧表示" />                                                            
+            </h:commandLink> 
+            <h:commandLink action="#{encounterToolController.listSummaryButton_action}" target="blank" >
+              <h:outputText style="size: 10px" value="エンカウンター(未実装)" />                                                            
+            </h:commandLink> 
+          </h:panelGrid>
+        </h:panelGrid>
+      </h:form>
+    </ui:define>            
+  </ui:composition>
 </html> 
