--- a/web/characterSheet/EditCharacterPerLevelPage.xhtml
+++ b/web/characterSheet/EditCharacterPerLevelPage.xhtml
@@ -98,19 +98,25 @@
               </h:panelGrid>
             </h:panelGrid>
             <h:panelGrid columns="2" id="gridPanel17" style="height: 100%; width: 100%" styleClass="tableGrid">
-              <h:panelGrid columns="2" id="gridPanel18" style="border: 1px solid #cccccc; width: 100%" styleClass="tableTitleBlackMiddle">
+              <h:panelGrid columns="2" id="gridPanel18" style="border: 1px solid #cccccc; width: 100%" 
+                           styleClass="tableTitleBlackMiddle">
                 <h:outputText id="outputText30" style="" value="技能ポイント合計"/>
                 <h:panelGrid id="gridPanel19" style="border: 1px solid rgb(204, 204, 204); ">
-                  <h:outputText id="outputText31" style=" font-size: 20px" value="#{characterSheetPerLevelController.skillPointUsedTotal}"/>
+                  <h:outputText id="outputText31" style=" font-size: 20px" 
+                                value="#{characterSheetPerLevelController.skillPointUsedTotal}"/>
                 </h:panelGrid>
               </h:panelGrid>
               <h:panelGrid columns="10" id="gridPanel20"
-                           style="border: 1px solid #cccccc; height: 100%; vertical-align: middle; width: 100%" styleClass="tableTitleBlackMiddle">
+                           style="border: 1px solid #cccccc; height: 100%; vertical-align: middle; width: 100%" 
+                           styleClass="tableTitleBlackMiddle">
                 <h:outputText id="outputText33"  value="増分技能ポイント"/>
                 <h:panelGrid columns="1" style="border: 1px solid #cccccc; ">
-                  <h:outputText style=" font-size: 18px" value="#{characterSheetPerLevelController.skillPointsAvailable}"/>
+                  <h:outputText style=" font-size: 18px" 
+                                value="#{characterSheetPerLevelController.skillPointsAvailable}"/>
                 </h:panelGrid>
-                <h:outputText id="outputText44" style="text-align: left; color: red" rendered="#{characterSheetPerLevelController.isSkillPointRemaind()}" value="未使用: #{characterSheetPerLevelController.skillPointUnused}"/>
+                <h:outputText id="outputText44" style="text-align: left; color: red" 
+                              rendered="#{characterSheetPerLevelController.isSkillPointRemaind()}" 
+                              value="未使用: #{characterSheetPerLevelController.skillPointUnused}"/>
                 <h:outputLabel value="(内訳:" style="font-size: 13px"/>
                 <h:outputText id="outputText35" value="#{characterSheetPerLevelController.skillPointAbilityModifier} (知)"/>
                 <h:outputText id="outputText37" value="+"/>
@@ -123,49 +129,64 @@
 
 
             <h:panelGrid id="skillTableGridPanel1" style="background-color: #000000; height: 100%; width: 100%">
-              <h:dataTable binding="#{characterSheetPerLevelController.skillTable}" headerClass="tableTitleBlackNopad"
+              <h:dataTable binding="#{characterSheetPerLevelController.skillTable}" 
+                           headerClass="tableTitleBlackNopad"
                            id="skillTable" rowClasses="skill-row-even,skill-row-odd" styleClass="waku"
                            value="#{applicationController.skillList}" var="currentRow">
                 <h:column id="column1">
-                  <h:outputText id="outputText16" style="font-size: 14px; font-weight: bold" value="#{characterSheetPerLevelController.classSkill}"/>
+                  <h:outputText id="outputText16" style="font-size: 14px; font-weight: bold" 
+                                value="#{characterSheetPerLevelController.classSkill}"/>
                   <f:facet name="header">
                     <h:outputText id="outputText17" value="クラス技能"/>
                   </f:facet>
                 </h:column>
                 <h:column id="column2">
-                  <h:outputText id="outputText18" style="font-size: 14px; font-weight: bold" value="&lt;#{currentRow.skillName}&gt; #{characterSheetPerLevelController.skillCheckAcceptNoRank}"/>
+                  <h:outputText id="outputText18" style="font-size: 14px; font-weight: bold" 
+                      value="&lt;#{currentRow.skillName}&gt; #{characterSheetPerLevelController.skillCheckAcceptNoRank}"/>
                   <f:facet name="header">
                     <h:outputText id="outputText19" value="技能名"/>
                   </f:facet>
                 </h:column>
                 <h:column id="column3">
-                  <h:outputText id="outputText20" rendered="#{characterSheetPerLevelController.isTriableSkill()}"  value="#{characterSheetPerLevelController.skillAbilityModifier} 【#{characterSheetPerLevelController.skillAbilityShortName}】"/>
+                  <h:outputText id="outputText20" 
+                                rendered="#{characterSheetPerLevelController.isLearnableSkill()}"  
+                                value="#{characterSheetPerLevelController
+                                         .skillAbilityModifier} 【#{characterSheetPerLevelController
+                                         .skillAbilityShortName}】"/>
                   <f:facet name="header">
                     <h:outputText id="outputText21" value="能力"/>
                   </f:facet>
                 </h:column>
                 <h:column id="column7">
-                  <h:inputText id="textField2" rendered="#{characterSheetPerLevelController.isTriableSkill()}" style="font-size: 18px; text-align: right; width: 30px" value="#{characterSheetPerLevelController.skillPoint}"/>
+                  <h:inputText id="textField2" 
+                               rendered="#{characterSheetPerLevelController.isLearnableSkill()}" 
+                               style="font-size: 18px; text-align: right; width: 30px" 
+                               value="#{characterSheetPerLevelController.skillPoint}"/>
                   <f:facet name="header">
                     <h:outputText id="outputText28" value="使用ポイント"/>
                   </f:facet>
                 </h:column>
                 <h:column id="column5">
-                  <h:outputText style="#{editCharacterPerLevel.skillTotalPointColor}" rendered="#{characterSheetPerLevelController.isTriableSkill()}" value="#{characterSheetPerLevelController.skillTotalPoint}"/>
+                  <h:outputText style="#{editCharacterPerLevel.skillTotalPointColor}" 
+                                rendered="#{characterSheetPerLevelController.isLearnableSkill()}" 
+                                value="#{characterSheetPerLevelController.skillTotalPoint}"/>
                   <f:facet name="header">
                     <h:outputText value="合計ポイント"/>
                   </f:facet>
                 </h:column>
                 <h:column id="column6">
                   <h:outputText id="outputText26" style="text-align: right" 
-                                rendered="#{characterSheetPerLevelController.isTriableSkill()}" 
+                                rendered="#{characterSheetPerLevelController.isLearnableSkill()}" 
                                 value="#{characterSheetPerLevelController.skillRank}"/>
                   <f:facet name="header">
                     <h:outputText id="outputText27" value="ランク"/>
                   </f:facet>
                 </h:column>
                 <h:column id="column4">
-                  <h:outputText escape="false" id="outputText22" rendered="#{characterSheetPerLevelController.isTriableSkill()}" style="font-size: 18px; font-weight: bolder" value="#{characterSheetPerLevelController.skillTotalRank}"/>
+                  <h:outputText escape="false" id="outputText22" 
+                                rendered="#{characterSheetPerLevelController.isLearnableSkill()}" 
+                                style="font-size: 18px; font-weight: bolder" 
+                                value="#{characterSheetPerLevelController.skillTotalRank}"/>
                   <f:facet name="header">
                     <h:outputText id="outputText23" value="合計ランク"/>
                   </f:facet>
@@ -173,7 +194,8 @@
               </h:dataTable>
             </h:panelGrid>
           </h:panelGrid>
-          <h:outputText id="outputText29" style="font-size: 8px" value="#{characterSheetPerLevelController.characterData.id}"/>
+          <h:outputText id="outputText29" style="font-size: 8px" 
+                        value="#{characterSheetPerLevelController.characterData.id}"/>
         </h:panelGrid>
       </h:form>
     </ui:define>            
