--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -90,7 +90,11 @@
               <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
                 <h:commandLink action="/armMaster/List" 
                                styleClass="leftpaneltextAdmin" value="武器"/>
-              </h:panelGrid>                             
+              </h:panelGrid>  
+              <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
+                <h:commandLink action="/spellMaster/List" 
+                               styleClass="leftpaneltextAdmin" value="呪文"/>
+              </h:panelGrid>  
             </h:panelGrid>                
           </h:form>                    
         </h:panelGrid>          
