new: Enable character invisible

--- a/web/armMaster/Edit.xhtml
+++ b/web/armMaster/Edit.xhtml
@@ -53,8 +53,8 @@
           <h:inputText id="threatRange" value="#{armMasterController.selected.threatRange}" 
                        title="#{bundle.CreateArmMasterTitle_threatRange}" />
 
-          <h:outputLabel value="高品質" for="masterWord" />
-          <h:selectBooleanCheckbox id="masterWord" 
+          <h:outputLabel value="高品質" for="masterWork" />
+          <h:selectBooleanCheckbox id="masterWork" 
                                    value="#{armMasterController.selected.masterwork}" />
 
           <h:outputLabel value="魔法強化ボーナス" for="enhancementBonus" />
